--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   ],
   "author": "Germain Sepúlveda",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
