fix: update SMTP configuration for improved email sending reliability

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,19 @@ PORT=3000
 # Para Gmail necesitas una "App Password" (contraseña de aplicación)
 # Instrucciones: https://support.google.com/accounts/answer/185833
 
+# OPCIÓN 1: Puerto 465 con SSL (RECOMENDADO para Render y otros servicios cloud)
 SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_SECURE=false
+SMTP_PORT=465
+SMTP_SECURE=true
 SMTP_USER=tu-email@gmail.com
 SMTP_PASS=tu-app-password-aqui
+
+# OPCIÓN 2: Puerto 587 con STARTTLS (puede ser bloqueado en algunos hostings)
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=tu-email@gmail.com
+# SMTP_PASS=tu-app-password-aqui
 
 # Correos
 FROM_EMAIL=tu-email@gmail.com
